--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,7 @@ $paragraph-font-size: 16px;
 $brand-font:'Open Sans', sans-serif;
 $paragraph-font: Arial;
 $h1-font: 'Damion', cursive;
+$body-font: 'Roboto Condensed', sans-serif;
 
 $nav-background: #191919;
 $kodfont-color: #7296af;
@@ -16,14 +17,15 @@ $kodfont-second: #fff;
 $kodfont-third: #000;
 $kodfont-four: #ccc;
 $kodfont-five: #ddd;
-$kodfont-six:  #f76c35;
+$orange-font:  #f7ddc8; 
 $box-shadow: rgba(135, 132, 128, 0.3);
 $title-section: #6f7070;
-$span-orange: #fc9105;
+$span-orange: #f58220;
 $span-green: #30ad14;
 $h1-color: #b6b6b6;
 $h2h3-color: #757471;
 $h4-color: #9e975a;
 $table-color: #878080;
 $shadow-color: #c4a57d;
-$legend-color: #f3f3f1
+$legend-color: #f3f3f1;
+$bodyfont-color: #a8a8a8;
