--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@
 @import "components/buttons";
 @import "components/paragraphtab";
 @import "components/listlegend";
+@import "components/form";
 @import "mediaquery";
 
 //@import "sections/generalsection"//
