--- a/css/style.css
+++ b/css/style.css
@@ -337,100 +337,79 @@ template {
   display: none;
 }
 
-.col-1 {
-  width: 8.33333%;
-}
-
-.col-2 {
-  width: 16.66667%;
-}
-
-.col-3 {
-  width: 25%;
-}
-
-.col-4 {
-  width: 33.33333%;
-}
-
-.col-5 {
-  width: 41.66667%;
-}
-
-.col-6 {
-  width: 50%;
-}
-
-.col-7 {
-  width: 58.33333%;
-}
-
-.col-8 {
-  width: 66.66667%;
-}
-
-.col-9 {
-  width: 75%;
-}
-
-.col-10 {
-  width: 83.33333%;
-}
-
-.col-11 {
-  width: 91.66667%;
-}
-
-.col-12 {
-  width: 100%;
-}
-
-.col-offset-0 {
-  margin-left: 0%;
-}
-
-.col-offset-1 {
-  margin-left: 8.33333%;
-}
-
-.col-offset-2 {
-  margin-left: 16.66667%;
-}
-
-.col-offset-3 {
-  margin-left: 25%;
-}
-
-.col-offset-4 {
-  margin-left: 33.33333%;
-}
-
-.col-offset-5 {
-  margin-left: 41.66667%;
-}
-
-.col-offset-6 {
-  margin-left: 50%;
-}
-
-.col-offset-7 {
-  margin-left: 58.33333%;
-}
-
-.col-offset-8 {
-  margin-left: 66.66667%;
-}
-
-.col-offset-9 {
-  margin-left: 75%;
-}
-
-.col-offset-10 {
-  margin-left: 83.33333%;
-}
-
-.col-offset-11 {
-  margin-left: 91.66667%;
+@media (min-width: 769px) {
+  .col-1 {
+    width: 8.33333%;
+  }
+  .col-2 {
+    width: 16.66667%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33333%;
+  }
+  .col-5 {
+    width: 41.66667%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33333%;
+  }
+  .col-8 {
+    width: 66.66667%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33333%;
+  }
+  .col-11 {
+    width: 91.66667%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+  .col-offset-0 {
+    margin-left: 0%;
+  }
+  .col-offset-1 {
+    margin-left: 8.33333%;
+  }
+  .col-offset-2 {
+    margin-left: 16.66667%;
+  }
+  .col-offset-3 {
+    margin-left: 25%;
+  }
+  .col-offset-4 {
+    margin-left: 33.33333%;
+  }
+  .col-offset-5 {
+    margin-left: 41.66667%;
+  }
+  .col-offset-6 {
+    margin-left: 50%;
+  }
+  .col-offset-7 {
+    margin-left: 58.33333%;
+  }
+  .col-offset-8 {
+    margin-left: 66.66667%;
+  }
+  .col-offset-9 {
+    margin-left: 75%;
+  }
+  .col-offset-10 {
+    margin-left: 83.33333%;
+  }
+  .col-offset-11 {
+    margin-left: 91.66667%;
+  }
 }
 
 /* Media query
@@ -516,6 +495,13 @@ body {
   font-family: Arial;
 }
 
+.form-page {
+  margin: 0 auto;
+  background-color: #ccc;
+  font-family: "Roboto Condensed", sans-serif;
+  color: #a8a8a8;
+}
+
 .container-fluid {
   text-align: center;
   padding-left: 10px;
@@ -529,8 +515,7 @@ img {
 
 /* Nav bar*/
 .navbar {
-  height: 55px;
-  line-height: 55px;
+  line-height: 62px;
   position: fixed;
   width: 100%;
   background-color: #fff;
@@ -621,7 +606,7 @@ i.icon-arrow-down {
 .side-nav a:hover {
   color: #fff;
   background-color: #191919;
-  border-left: 3px solid #f76c35;
+  border-left: 3px solid #f58220;
 }
 
 .side-nav .b-close {
@@ -659,17 +644,9 @@ i.icon-arrow-down {
 }
 
 /*Calendar input style*/
-/*input:required {
-    border-color: rgba(255, 99 ,71, 0.6);
-    outline-color: rgb(63, 122, 51);     
-   }*/
-form {
+.calendar-form {
   display: flex;
   justify-content: center;
-}
-
-input {
-  border: 0;
 }
 
 .input-calendar {
@@ -684,6 +661,7 @@ input {
 .date-calendar {
   width: 150px;
   padding: 2px 5px;
+  border: 0;
 }
 
 .cal-right {
@@ -699,13 +677,13 @@ i.icon-calendar {
 [class*="btn-"] {
   width: 80px;
   height: 40px;
-  -webkit-border-radius: 10%;
-  -moz-border-radius: 10%;
-  -ms-border-radius: 10%;
-  border-radius: 10%;
+  -webkit-border-radius: 5%;
+  -moz-border-radius: 5%;
+  -ms-border-radius: 5%;
+  border-radius: 5%;
   border: none;
-  background-color: #fc9105;
-  color: #fff;
+  background-color: #f58220;
+  color: #f7ddc8;
   cursor: pointer;
   text-shadow: 0.7px 0.7px #6f7070;
   padding: 10px;
@@ -863,7 +841,7 @@ span.linesp {
 }
 
 .layer i.icon-links {
-  color: #fc9105;
+  color: #f58220;
 }
 
 /*list legend*/
@@ -898,7 +876,7 @@ span.linesp {
 .legend li.midch i {
   font-size: 14px;
   padding-right: 3px;
-  color: #fc9105;
+  color: #f58220;
 }
 
 .legend li.lastch {
@@ -918,6 +896,42 @@ span.linesp {
   text-align: left;
   color: #6f7070;
   font-family: "Open Sans", sans-serif;
+}
+
+.divide {
+  border: 0.3px solid #ccc;
+}
+
+.first-form {
+  text-align: center;
+}
+
+.field {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+
+.form-input {
+  height: 30px;
+  width: 70%;
+  -webkit-border-radius: 3%;
+  -moz-border-radius: 3%;
+  -ms-border-radius: 3%;
+  border-radius: 3%;
+  border: 0.5px solid #ccc;
+  color: #ccc;
+  font-size: 13px;
+}
+
+.form-label {
+  height: 30px;
+  line-height: 30px;
+}
+
+.submit {
+  border-top: 0.5px solid #ccc;
+  padding: 25px 0;
 }
 
 /*Media query*/
@@ -1002,6 +1016,18 @@ span.linesp {
   }
   .line {
     width: 250px;
+  }
+  .col-m-8 {
+    margin-left: 16.66667%;
+  }
+  .form-input {
+    height: 30px;
+    width: 250px;
+    padding: 10px;
+  }
+  .form.label {
+    height: 30px;
+    line-height: 30px;
   }
 }
 
@@ -1103,7 +1129,7 @@ span.linesp {
     top: 25px;
     right: 1px;
   }
-  form {
+  .calendar-form {
     position: relative;
     justify-content: space-around;
   }
@@ -1141,6 +1167,34 @@ span.linesp {
     width: 35px;
     height: 35px;
   }
+  .col-offset-3 {
+    margin-left: 0;
+  }
+  .form-input {
+    height: 30px;
+    width: 70%;
+    padding: 10px;
+  }
+  .form-label {
+    height: 30px;
+    line-height: 30px;
+  }
+}
+
+.form-page .row {
+  margin: 0;
+}
+
+.form-page .main-section {
+  width: 80%;
+}
+
+.form-page .title {
+  border-bottom: 0.5px solid #ccc;
+}
+
+.form-page .btn-lg {
+  width: 90px;
 }
 
 /*# sourceMappingURL=style.css.map */
