--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,10 @@
 @import "components/paragraphtab";
 @import "components/listlegend";
 @import "components/form";
+@import "components/modals";
 @import "mediaquery";
+
+
 
 //@import "sections/generalsection"//
 
