--- a/css/style.css
+++ b/css/style.css
@@ -617,6 +617,14 @@ i.icon-arrow-down {
   margin-left: 90px;
 }
 
+.title-nav {
+  color: #b6b6b6;
+  text-transform: uppercase;
+  padding-left: 20px;
+  padding-top: 20px;
+  font-family: Arial;
+}
+
 .main {
   transition: margin-left 0.5s;
   padding: 20px;
@@ -932,6 +940,47 @@ span.linesp {
 .submit {
   border-top: 0.5px solid #ccc;
   padding: 25px 0;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+  padding: 30px;
+}
+
+.overlay.show {
+  display: flex;
+}
+
+.overlay::webkit-scrollbar {
+  display: none;
+}
+
+.modal {
+  max-width: 600px;
+  margin: auto;
+  background-color: #ffffff;
+  position: relative;
+  padding: 30px;
+}
+
+.modal.show {
+  display: block;
+}
+
+.modal .btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px 10px;
 }
 
 /*Media query*/
