--- a/sass/components/_navbars.scss
+++ b/sass/components/_navbars.scss
@@ -95,3 +95,11 @@ i.icon-arrow-down {
     font-size: 34px;
     margin-left: 90px;
 }
+
+.title-nav {
+    color: $h1-color;
+    text-transform: uppercase;
+    padding-left: 20px;
+    padding-top: 20px;
+    font-family: $paragraph-font;
+}
