--- a/sass/components/_modals.scss
+++ b/sass/components/_modals.scss
@@ -3,18 +3,15 @@
   top: 0;
   left: 0;
   z-index: 999;
-
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.5);
   justify-content: center;
   align-items: center;
-
   overflow: auto;
   padding: 30px;
-  //display: none;
+  display: none;
 }
-
 
 .overlay.show {
     display: flex;
@@ -30,7 +27,7 @@
     background-color: #ffffff;
     position: relative;
     padding: 30px;
-    //display: none;
+    display: none;
   }
 
   .modal.show {
