--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -19,6 +19,7 @@ $kodfont-four: #ccc;
 $kodfont-five: #ddd;
 $orange-font:  #f7ddc8; 
 $box-shadow: rgba(135, 132, 128, 0.3);
+$box-modal: rgba(0,0,0,0.5);
 $title-section: #6f7070;
 $span-orange: #f58220;
 $span-green: #30ad14;
