--- a/sass/components/_modals.scss
+++ b/sass/components/_modals.scss
@@ -5,7 +5,7 @@
   z-index: 999;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.5);
+  background-color: $box-modal;
   justify-content: center;
   align-items: center;
   overflow: auto;
@@ -24,7 +24,7 @@
   .modal {
     max-width: 600px;
     margin: auto;
-    background-color: #ffffff;
+    background-color: $kodfont-second;
     position: relative;
     padding: 30px;
     display: none;
