--- a/sass/components/_navbars.scss
+++ b/sass/components/_navbars.scss
@@ -3,6 +3,7 @@
     line-height: 62px;
     position: fixed;
     width: 100%;
+    z-index: 1;
     background-color: $kodfont-second;
         ul {
             margin: 0;
