--- a/sass/components/_modals.scss
+++ b/sass/components/_modals.scss
@@ -22,12 +22,13 @@
   }
 
   .modal {
-    max-width: 600px;
+    max-width: 800px;
     margin: auto;
     background-color: $kodfont-second;
     position: relative;
     padding: 30px;
     display: none;
+    @include border-radius(3%);
   }
 
   .modal.show {
@@ -39,4 +40,12 @@
     top: 0;
     right: 0;
     padding: 5px 10px;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .modal > .btn-lg {
+    display: flex;
+    justify-content: center;
+    margin: 20px 20px 0 20px;
   }
