--- a/sass/pages/_form-page.scss
+++ b/sass/pages/_form-page.scss
@@ -3,7 +3,7 @@
         margin: 0;
     }
     .main-section {
-        width: 80%;
+        width: auto;
     }
     .title {
         border-bottom: 0.5px solid $kodfont-four;
