--- a/sass/components/_listlegend.scss
+++ b/sass/components/_listlegend.scss
@@ -1,52 +1,49 @@
-/*list legend*/
+//list legend
 .legend {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-        li {
-            display: inline-block;
-            padding: 0 25px;
-            margin: 0 5px;
-            font-size: 15px;
-            background-color: $legend-color;
-            height: 35px;
-            line-height: 35px;
-            text-align: center;
-            color: $title-section;
-            @include border-radius(7%);
-        }
-        li.firstch {
-            i {
-              font-size: 14px;
-              padding-right: 3px;
-              color: $kodfont-color;
-            }
-        }
-        li.midch {
-            i {
-              font-size: 14px;
-              padding-right: 3px;
-              color: $span-orange;
-            }
-        }
-        li.lastch {
-            background-color: $kodfont-second;
-            color: $kodfont-color;
-            i {
-              font-size: 14px;
-              padding-right: 3px;
-              color: $span-green;
-            }
-        }
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  li {
+    display: inline-block;
+    padding: 0 25px;
+    margin: 0 5px;
+    font-size: 15px;
+    background-color: $legend-color;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    color: $title-section;
+    @include border-radius(7%);
+  }
+  li.firstch {
+    i {
+      font-size: 14px;
+      padding-right: 3px;
+      color: $kodfont-color;
+    }
+  }
+  li.midch {
+    i {
+      font-size: 14px;
+      padding-right: 3px;
+      color: $span-orange;
+    }
+  }
+  li.lastch {
+    background-color: $kodfont-second;
+    color: $kodfont-color;
+    i {
+      font-size: 14px;
+      padding-right: 3px;
+      color: $span-green;
+    }
+  }
 }
 
 .header5 {
-padding: 15px 0;
-margin: 15px 0;
-text-align: left;
-color: $title-section;
-font-family: $brand-font;
+  padding: 15px 0;
+  margin: 15px 0;
+  text-align: left;
+  color: $title-section;
+  font-family: $brand-font;
 }
-
-
-
