--- a/sass/pages/_form-page.scss
+++ b/sass/pages/_form-page.scss
@@ -1,14 +1,14 @@
 .form-page {
-    .row {
-        margin: 0;
-    }
-    .main-section {
-        width: auto;
-    }
-    .title {
-        border-bottom: 0.5px solid $kodfont-four;
-    }
-    .btn-lg {
-        width: 90px;
-    }
+  .row {
+    margin: 0;
+  }
+  .main-section {
+    width: auto;
+  }
+  .title {
+    border-bottom: .5px solid $kodfont-four;
+  }
+  .btn-lg {
+    width: 90px;
+  }
 }
