--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -1,28 +1,29 @@
-/*Calendar input style*/
+//Calendar input style
 .calendar-form {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-.input-calendar{
-    border: 1px solid $kodfont-four;
-    padding: 4px;
+.input-calendar {
+  border: 1px solid $kodfont-four;
+  padding: 4px;
 }
 
 .calendar {
-    text-align: center;
+  text-align: center;
 }
    
 .date-calendar {
-   width: 150px;
-   padding: 2px 5px;
-   border: 0;
+  width: 150px;
+  padding: 2px 5px;
+  border: 0;
 }
 
 .cal-right {
-    border-left: 0.5px solid $kodfont-four;
-    text-align: center;
+  border-left: .5px solid $kodfont-four;
+  text-align: center;
 }
+
 i.icon-calendar {
-    margin-right: 10px;
+  margin-right: 10px;
 }
