--- a/sass/components/_mainsection.scss
+++ b/sass/components/_mainsection.scss
@@ -1,44 +1,44 @@
 //Main content
 .main {
-transition: margin-left 0.5s;
-padding: 20px;
-overflow: hidden;
-width: 100%;
-margin-left: 250px;
+  transition: margin-left .5s;
+  padding: 20px;
+  overflow: hidden;
+  width: 100%;
+  margin-left: 250px;
 }
 
 .main-section {
-width: 90%;
-background-color: $kodfont-second;
-margin: 0 5%;
-box-shadow: 5px 8px $box-shadow;
+  width: 90%;
+  background-color: $kodfont-second;
+  margin: 0 5%;
+  box-shadow: 5px 8px $box-shadow;
 }
   
 .title {
-text-transform: uppercase;
-color: $h1-color;
-border-bottom: 2px solid $kodfont-four;
-padding: 8px;
+  text-transform: uppercase;
+  color: $h1-color;
+  border-bottom: 2px solid $kodfont-four;
+  padding: 8px;
 }
   
 .digit {
-padding: 0;
+  padding: 0;
 }
 
 .scroll-wrapper {
-    display: block;
-    width: 100%;
-    overflow-x: auto;
-  }
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+}
   
-  .scroll-wrapper > .chart {
-    width: auto;
-    max-width: 100%;
-  }
+.scroll-wrapper > .chart {
+  width: auto;
+  max-width: 100%;
+}
 
-  canvas {
-    position: relative;
-    top: -38px;
+canvas {
+  position: relative;
+  top: -38px;
 }
 
 .main-form {
