--- a/css/style.css
+++ b/css/style.css
@@ -569,7 +569,7 @@ i.icon-arrow-down {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 0;
   background-color: #000;
@@ -584,11 +584,11 @@ i.icon-arrow-down {
   font-family: "Damion", cursive;
   text-align: left;
   font-size: 38px;
-  padding-bottom: 10px;
+  padding: 0 0 10px 10px;
 }
 
 .side-nav a {
-  padding: 20px 20px 20px 2px;
+  padding: 20px 20px 20px 10px;
   text-decoration: none;
   font-size: 18px;
   color: #ccc;
@@ -701,16 +701,16 @@ canvas {
 .input-calendar {
   border: 1px solid #ccc;
   padding: 4px;
-}
-
-.calendar {
-  text-align: center;
+  position: relative;
+  position: relative;
+  z-index: 1;
 }
 
 .date-calendar {
   width: 150px;
   padding: 2px 5px;
   border: 0;
+  background-color: rgba(252, 252, 252, 0.4);
 }
 
 .cal-right {
@@ -719,7 +719,10 @@ canvas {
 }
 
 i.icon-calendar {
-  margin-right: 10px;
+  position: absolute;
+  top: 10px;
+  left: 290px;
+  z-index: -1;
 }
 
 [class*="btn-"] {
@@ -969,6 +972,7 @@ span.linesp {
   border: 0.5px solid #ccc;
   color: #ccc;
   font-size: 13px;
+  padding: 10px;
 }
 
 .form-label {
@@ -985,7 +989,7 @@ span.linesp {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 998;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -1005,10 +1009,11 @@ span.linesp {
 }
 
 .modal {
-  max-width: 800px;
+  max-width: 900px;
   margin: auto;
   background-color: #fff;
   position: relative;
+  z-index: 999;
   padding: 30px;
   display: none;
   -webkit-border-radius: 3%;
@@ -1034,6 +1039,12 @@ span.linesp {
   display: flex;
   justify-content: center;
   margin: 20px 20px 0 20px;
+}
+
+textarea {
+  resize: none;
+  max-width: 740px;
+  height: 70px;
 }
 
 @media (min-width: 427px) and (max-width: 768px) {
@@ -1110,6 +1121,12 @@ span.linesp {
     color: #000;
     float: none;
     width: 100%;
+  }
+  .side-nav a {
+    padding: 20px;
+  }
+  .side-nav h1 {
+    padding: 0 0 10px 10px;
   }
   .cal-right {
     text-align: center;
@@ -1212,13 +1229,20 @@ span.linesp {
     float: none;
     width: 100%;
   }
+  .side-nav a {
+    padding: 20px;
+  }
+  .side-nav h1 {
+    padding: 0 0 10px 10px;
+  }
   .input-calendar {
     border: none;
     position: relative;
   }
   .input-calendar input {
-    padding: 5px 0;
+    padding: 5px 0 5px 40px;
     text-align: center;
+    width: 180px;
   }
   .cal-right {
     border: none;
@@ -1227,7 +1251,7 @@ span.linesp {
     margin-right: 0;
     position: absolute;
     top: 31px;
-    left: 20px;
+    left: 50px;
   }
   .btn-sm {
     position: absolute;
