--- a/sass/_mediaquery.scss
+++ b/sass/_mediaquery.scss
@@ -29,6 +29,15 @@
       width: 100%;
     }
   }
+  //side bar
+  .side-nav {
+    a {
+      padding: 20px;
+    }
+    h1 {
+      padding: 0 0 10px 10px;
+    }
+  }
   //input calendar
   .cal-right {
     text-align: center;
@@ -87,13 +96,23 @@
       width: 100%;
     }
   }
+  //side bar
+  .side-nav {
+    a {
+      padding: 20px;
+    }
+    h1 {
+      padding: 0 0 10px 10px;
+    }
+  }
   //calendar form
   .input-calendar {
     border: none;
     position: relative;
     input {
-      padding: 5px 0;
+      padding: 5px 0 5px 40px;
       text-align: center;
+      width: 180px;
     }
   }
   .cal-right {
@@ -103,7 +122,7 @@
     margin-right: 0;
     position: absolute;
     top: 31px;
-    left: 20px;
+    left: 50px;
   }
   .btn-sm {
     position: absolute;
