--- a/sass/components/_modals.scss
+++ b/sass/components/_modals.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 998;
   width: 100%;
   height: 100%;
   background-color: $box-modal;
@@ -22,10 +22,11 @@
 }
 
 .modal {
-  max-width: 800px;
+  max-width: 900px;
   margin: auto;
   background-color: $kodfont-second;
   position: relative;
+  z-index: 999;
   padding: 30px;
   display: none;
   @include border-radius(3%);
@@ -48,4 +49,10 @@
   display: flex;
   justify-content: center;
   margin: 20px 20px 0 20px;
+}
+
+textarea {
+  resize: none;
+  max-width: 740px;
+  height: 70px;
 }
