--- a/css/style.css
+++ b/css/style.css
@@ -560,11 +560,6 @@ i.icon-arrow-down {
   font-size: 15px;
 }
 
-.navbar a:hover {
-  background-color: #ddd;
-  color: #191919;
-}
-
 .side-nav {
   height: 100%;
   width: 0;
@@ -598,12 +593,6 @@ i.icon-arrow-down {
 
 .side-nav i {
   padding-right: 6px;
-}
-
-.side-nav a:hover {
-  color: #fff;
-  background-color: #191919;
-  border-left: 3px solid #f58220;
 }
 
 .side-nav .b-close {
@@ -839,14 +828,6 @@ span.linesp {
   padding: 20px 0;
 }
 
-.link_div:hover {
-  background-color: #f3f3f1;
-}
-
-.link_div:hover .content_link {
-  overflow: visible;
-}
-
 .content_link {
   justify-content: space-between;
   width: 120px;
@@ -1047,6 +1028,24 @@ textarea {
   height: 70px;
 }
 
+@media all and (min-width: 769px) {
+  .side-nav a:hover {
+    color: #fff;
+    background-color: #191919;
+    border-left: 3px solid #f58220;
+  }
+  .navbar a:hover {
+    background-color: #ddd;
+    color: #191919;
+  }
+  .link_div:hover {
+    background-color: #f3f3f1;
+  }
+  .link_div:hover .content_link {
+    overflow: visible;
+  }
+}
+
 @media (min-width: 427px) and (max-width: 768px) {
   .col-m-1 {
     flex: 0 0 8.33333%;
@@ -1100,11 +1099,60 @@ textarea {
     padding: 0;
     margin-left: 0;
   }
-  .navbar {
-    height: 50px;
+  .wrapped {
+    height: 144px;
+    opacity: .9;
+    background-color: #000000;
+    width: 0;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    transition: .5s;
   }
-  .navbar ul {
-    display: none;
+  .wrapped .navbar {
+    position: static;
+    line-height: 0;
+    background-color: inherit;
+  }
+  .wrapped .navbar ul {
+    text-align: center;
+    float: none;
+    padding-inline-start: 0;
+    padding-top: 10px;
+  }
+  .wrapped .navbar ul li {
+    display: list-item;
+    float: none;
+    padding: 10px 0;
+  }
+  .wrapped .navbar ul li a {
+    float: none;
+    display: inline;
+    border-left: none;
+    padding: 7px 0;
+    color: #ccc;
+  }
+  .span-name {
+    color: #ccc;
+    font-size: 15px;
+    overflow-wrap: break-word;
+  }
+  .main-section {
+    position: relative;
+  }
+  .open-slide > a {
+    border-left: none;
+    position: absolute;
+    top: 5px;
+    right: -80px;
+  }
+  .wallet {
+    color: #ccc;
+    overflow-wrap: break-word;
+  }
+  .side-nav {
+    top: 154px;
   }
   .side-nav a {
     padding: 20px;
@@ -1132,6 +1180,9 @@ textarea {
   .form.label {
     height: 30px;
     line-height: 30px;
+  }
+  .content_link.hid {
+    overflow: visible;
   }
 }
 
@@ -1191,11 +1242,60 @@ textarea {
     padding: 0 10px 10px 10px;
     margin-left: 0;
   }
-  .navbar {
-    height: 50px;
+  .wrapped {
+    height: 144px;
+    opacity: .9;
+    background-color: #000000;
+    width: 0;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    transition: .5s;
   }
-  .navbar ul {
-    display: none;
+  .wrapped .navbar {
+    position: static;
+    line-height: 0;
+    background-color: inherit;
+  }
+  .wrapped .navbar ul {
+    text-align: center;
+    float: none;
+    padding-inline-start: 0;
+    padding-top: 10px;
+  }
+  .wrapped .navbar ul li {
+    display: list-item;
+    float: none;
+    padding: 10px 0;
+  }
+  .wrapped .navbar ul li a {
+    float: none;
+    display: inline;
+    border-left: none;
+    padding: 7px 0;
+    color: #ccc;
+  }
+  .span-name {
+    color: #ccc;
+    font-size: 15px;
+    overflow-wrap: break-word;
+  }
+  .main-section {
+    position: relative;
+  }
+  .open-slide > a {
+    border-left: none;
+    position: absolute;
+    top: 5px;
+    right: -80px;
+  }
+  .wallet {
+    color: #ccc;
+    overflow-wrap: break-word;
+  }
+  .side-nav {
+    top: 154px;
   }
   .side-nav a {
     padding: 20px;
